--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,5 +6,5 @@ Authors@R: c(person("Julien", "Boelaert", role= "aut", email="jubo.stats@gmail.c
 Author: Julien Boelaert
 Maintainer: Julien Boelaert <jubo.stats@gmail.com>
 Description: aweSOM interactive interface and plots for (Kohonen) self-organizing maps.
-Depends: R (>= 3.0), RColorBrewer, shiny, e1071, viridis
+Depends: R (>= 3.0), shiny, RColorBrewer, viridis, e1071
 License: GPL (>= 2)
