--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,5 +6,5 @@ Author: Julien Boelaert, Mohamed Megdoud, Otmane Naji, Samuel Hym, Etienne Ollio
 Maintainer: Julien Boelaert <jubo.stats@gmail.com>
 Description: Interactive interface and plots for Kohonen self-organizing maps.
 Depends: R (>= 3.0)
-Imports: kohonen, shiny, RColorBrewer, viridis, e1071
+Imports: kohonen, shiny, RColorBrewer, viridis, e1071, data.table
 License: GPL (>= 2)
